--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,7 +44,7 @@ sidebar:
       - item: User research
         link:
 
-    writing samples:
+    writing:
       - item: liang.github.io
         link: liang.github.io
 
