--- a/_data/data.yml
+++ b/_data/data.yml
@@ -51,7 +51,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      I'm a technical writer who's okay with using contractions. I've worked
+      I'm a technical writer in the San Francisco Bay Area. I've worked
       in the networking and FinTech fields, contributing to user manuals, API
       docs, release notes, and instructional videos.
 
