--- a/_data/data.yml
+++ b/_data/data.yml
@@ -86,7 +86,7 @@ experiences:
       time: July 2019 - Present
       company: PayPal, San Jose, CA
       details: |
-         Where I'm am now. Spending my time focusing on the end-to-end API documentation process.
+         Where I am now. My role focuses on the end-to-end API documentation process.
           - API writer for PayPal’s developr documentation.
           - Managed the launch of PayPal Commerce Platform.
           - Defined the planning and strategies for product documents.
@@ -165,10 +165,10 @@ skills:
         level: 80%
 
       - name: Operating Systems
-        level: 90%
+        level: 85%
 
       - name: Python
-        level: 20%
+        level: 35%
 
 footer: >
     Updated March, 2020</a>
