--- a/_data/data.yml
+++ b/_data/data.yml
@@ -141,7 +141,7 @@ projects:
         tagline: "Python, cURL"
 
 skills:
-    title: Skills Proficiency
+    title: Proficiency
 
     toolset:
       - name: Technical writing
