--- a/_data/data.yml
+++ b/_data/data.yml
@@ -86,7 +86,7 @@ experiences:
       time: July 2019 - Present
       company: PayPal, San Jose, CA
       details: |
-         Where I am now. My role focuses on the end-to-end API documentation process.
+         Where I am now. My role focuses on leading the end-to-end API documentation process.
           - API writer for PayPal’s developr documentation.
           - Managed the launch of PayPal Commerce Platform.
           - Defined the planning and strategies for product documents.
