--- a/_data/data.yml
+++ b/_data/data.yml
@@ -52,7 +52,7 @@ career-profile:
     title: Career Profile
     summary: |
       I'm a technical writer in the San Francisco Bay Area. I've worked
-      in the networking and FinTech fields, contributing to user manuals, API
+      in the networking and FinTech industries, contributing to user manuals, API
       docs, release notes, and instructional videos.
 
       I'm passionate about the user experience and always think about content
