--- a/_data/data.yml
+++ b/_data/data.yml
@@ -55,7 +55,7 @@ career-profile:
       in the networking and FinTech industries, contributing to user manuals, API
       docs, release notes, and instructional videos.
 
-      I'm passionate about the user experience and always think about content
+      I'm passionate about the reader's experience and always think about content
       strategy, information architecture, and the writing itself.
 
 education:
