--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,7 +44,7 @@ sidebar:
       - item: User research
         link:
 
-    skills:
+    proficiency:
         title: Proficiency
 
         toolset:
