--- a/_data/data.yml
+++ b/_data/data.yml
@@ -104,8 +104,8 @@ experiences:
       time: December 2012 - May 2018
       company: F5 Networks, San Jose, CA
       details: |
-        My first full-time writing role, starting as a junior technical writer
-        before being promoted to a senior role in 2018.
+        My first full-time writing role, starting as a junior writer
+        before being promoted twice during my tenure.
           - Lead writer for three F5 product lines.
           - Wrote technical documentation in DITA using Oxygen XML.
           - Published HTML and PDF documents using Adobe CQ5.
