--- a/_data/data.yml
+++ b/_data/data.yml
@@ -84,7 +84,7 @@ experiences:
       details: |
          Where I am now. My role focuses on leading the end-to-end API documentation process.
           - API writer for PayPal’s developr documentation.
-          - Managed the launch of PayPal Commerce Platform.
+          - Managed the launch of PayPal's rebranded developer documentation portal.
           - Defined the planning and strategies for product documents.
           - Established the team's style guide, templates, and best practices.
 
