--- a/_data/data.yml
+++ b/_data/data.yml
@@ -85,15 +85,14 @@ experiences:
          Where I am now. My role focuses on leading the end-to-end API documentation process.
           - API writer for PayPal’s developr documentation.
           - Managed the launch of PayPal's rebranded developer documentation portal.
-          - Defined the planning and strategies for product documents.
+          - Defined the planning and strategies for creating API documents.
           - Established the team's style guide, templates, and best practices.
 
     - role: Senior Technical Writer
       time: May 2018 - July 2019
       company: Silver Peak Systems, Santa Clara, CA
       details: |
-        I was the first full-time writer, responsible for the end-to-end
-        documentation process.
+        I was the first full-time writer, responsible for Silver Peak's entire documentation catalog.
           - Wrote and published technical guides and online help in DITA using Madcap Flare.
           - Wrote networking and routing documents, including the OSI layers, TCP/IP, OSPF, BGP, and VRRP.
           - Set up and maintained the documentation GitHub repository.
