--- a/_data/data.yml
+++ b/_data/data.yml
@@ -127,7 +127,7 @@ projects:
         tagline: "Oxygen XML, Madcap Flare, Perforce, GitHub, Confluence, JIRA, Camtasia, Snagit, Illustrator, InDesign, Dreamweaver, MS Office, Postman, cURL"
 
       - title: Technology
-        tagline: "REST and SOAP APIs, networking and routing protocols, cloud technology, virtualization, network security, SDN, SD-WAN, REST, SOAP, policies, distributed systems"
+        tagline: "REST and SOAP APIs, networking and routing protocols, cloud technology, virtualization, network security, SDN, SD-WAN, REST, SOAP, policies, distributed systems, e-finance"
 
       - title: Operating Systems
         tagline: "Windows, macOS"
