--- a/_data/data.yml
+++ b/_data/data.yml
@@ -84,6 +84,7 @@ experiences:
       details: |
          Where I am now. My role focuses on leading the end-to-end API documentation process.
           - API writer for PayPal’s developr documentation.
+          - Wrote and edit API integration guides.
           - Managed the launch of PayPal's rebranded developer documentation portal.
           - Defined the planning and strategies for creating API documents.
           - Established the team's style guide, templates, and best practices.
@@ -95,6 +96,7 @@ experiences:
         I was the first full-time writer, responsible for Silver Peak's entire documentation catalog.
           - Wrote and published technical guides and online help in DITA using Madcap Flare.
           - Wrote networking and routing documents, including the OSI layers, TCP/IP, OSPF, BGP, and VRRP.
+          - Wrote over 10 user guides in one year.
           - Set up and maintained the documentation GitHub repository.
           - Defined the planning and strategies for product documents.
           - Established and enforced the team's style guide and best practices.
@@ -110,6 +112,8 @@ experiences:
           - Published HTML and PDF documents using Adobe CQ5.
           - Wrote sofware and networking guides, including 2FA, AAA, SAML, and OAuth.
           - Wrote REST API reference guides for F5's BIG-IQ Access product line.
+          - Completed 13 BIG-IP releases and 5 BIG-IQ releases
+          - Wrote over 30 compatibility matrix docs
           - Part of a team publishing instructional videos using Camtasia.
 
 projects:
