--- a/_data/data.yml
+++ b/_data/data.yml
@@ -137,7 +137,7 @@ projects:
         tagline: "Windows, macOS"
 
       - title: Coding
-        tagline: "Python"
+        tagline: "Python, data structures, algorithms"
 
 skills:
     title: Proficiency
