--- a/_data/data.yml
+++ b/_data/data.yml
@@ -38,7 +38,7 @@ sidebar:
       - item: Content strategy
         link:
 
-      - item: Readability
+      - item: Text readability
         link:
 
       - item: User research
@@ -119,7 +119,7 @@ experiences:
 projects:
     title: Skills
     intro: >
-      What I've learned over the years.
+      What I've learned over the years:
     assignments:
       - title: Technical writing
         tagline: "DITA, topic-based authoring, readability, minimalism, API documentation, video learning, release notes, editing"
