--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,8 +15,8 @@ sidebar:
     email: liangsong23@gmail.com
     phone: 408 242 8661
     website: liang.github.io #do not add http://
-    linkedin: https://www.linkedin.com/in/liangsong23/
-    github: https://github.com/liangsong23
+    linkedin: linkedin.com/in/liangsong23/
+    github: github.com/liangsong23
     gitlab:
     bitbucket:
     twitter:
